@@ -1,4 +1,4 @@
-all: test1 test2 test3 test4 perftest dyntest dyntest2 test_notice
+all: test1 test2 test3 test4 perftest dyntest dyntest2 test_notice test_code100
 
 #LDFLAGS=-g -I /usr/local/pgsql/include -L/usr/local/pgsql/lib -lecpg -lpq
 LDFLAGS=-g -I ../include -I /usr/include/postgresql -L /usr/lib -lecpg -lpq
